# cabal-clean

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal-clean.cabal  cabal.haskell-ci
.github/workflows/: haskell-ci.yml
license-report/: Makefile
src/: DiscoverGHCs.hs  License.hs  Main.hs  Makefile  Options.hs  Structure.hs  Types.hs  Util.hs  Version.hs
