cabal-version:       >=1.10

name:                cabal-clean
version:             0.0.20210815
synopsis:            Remove outdated cabal build artefacts from `dist-newstyle`.

description:         Simple command line tool to remove cabal build artefacts
                     from `dist-newstyle/build` that are superseded by newer
                     version of the built package or the Haskell compiler.

homepage:            https://github.com/andreasabel/cabal-clean
bug-reports:         https://github.com/andreasabel/cabal-clean/issues
license:             PublicDomain
license-file:        LICENSE

author:              Andreas Abel
maintainer:          Andreas Abel <andreas.abel@cse.gu.se>
copyright:           Andreas Abel, 2021
category:            Development

build-type:          Simple

extra-source-files:  CHANGELOG.md
                     README.md

tested-with:         GHC == 8.0.2
                     GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.4
                     GHC == 8.10.4
                     GHC == 9.0.1

source-repository head
  type:     git
  location: git://github.com/andreasabel/cabal-clean.git

source-repository this
  type:     git
  location: git://github.com/andreasabel/cabal-clean.git
  tag:      v0.2021.6.1

executable cabal-clean
  main-is:             Main.hs

  other-modules:
    Structure
    Util
    Version
    Paths_cabal_clean

  build-depends:
    base >=4.9 && < 5
    , containers
    , directory
    -- , directory >= 1.2.6.2 && < 1.4
    , filepath
    -- , filepath == 1.4.*
    , mtl
    , optparse-applicative
    -- , optparse-applicative >= 0.13 && < 0.16
    , pretty-terminal
    , split

  hs-source-dirs:      src
  default-language:    Haskell2010

  default-extensions:
    -- BangPatterns
    -- ConstraintKinds
    -- DefaultSignatures
    -- DeriveDataTypeable
    -- DeriveFoldable
    DeriveFunctor
    -- DeriveTraversable
    -- ExistentialQuantification
    -- FlexibleContexts
    -- FlexibleInstances
    -- FunctionalDependencies
    -- InstanceSigs
    LambdaCase
    -- MultiParamTypeClasses
    MultiWayIf
    -- NamedFieldPuns
    -- OverloadedStrings
    PatternSynonyms
    -- RankNTypes
    RecordWildCards
    -- ScopedTypeVariables
    -- StandaloneDeriving
    TupleSections
    -- TypeSynonymInstances

  ghc-options:
    -- -Wall
    -- -Wcompat
    -- -Wno-missing-pattern-synonym-signatures

test-suite test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Tests.hs
  default-language:   Haskell2010
  ghc-options:        -threaded
  build-depends:
    base >= 4.11
    -- goldplate requires ghc >= 8.4
    , process
  build-tool-depends: goldplate:goldplate
